--- a/style.css
+++ b/style.css
@@ -1,41 +1,51 @@
-
-
-#slide1:target ~ .slides .slide1,
-#slide2:target ~ .slides .slide2,
-#slide3:target ~ .slides .slide3,
-#slide4:target ~ .slides .slide4,
-#slide5:target ~ .slides .slide5,
-#slide6:target ~ .slides .slide6 {
-    display: flex;
+#slide1:target~.slides .slide1,
+#slide2:target~.slides .slide2,
+#slide3:target~.slides .slide3,
+#slide4:target~.slides .slide4,
+#slide5:target~.slides .slide5,
+#slide6:target~.slides .slide6 {
+  display: flex;
 }
 
 /* Pagination styling */
 .pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 10px;
 }
 
 
 
 swiper-container {
-    width: 100%;
-    height: 100%;
-  }
+  width: 100%;
+  height: 100%;
+}
 
-  swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#Card_description {
+  max-height: 0;
+  overflow: hidden;
+  padding-top: 0;
+  transition: max-height .5s;
+}
+#Card_description::after{
+  content: "";
+  display: block;
+  padding-bottom: 8px;
+}
